* Refs None, fix order_items description is too long error on users_server, fix KeyError in basker on front_server.

--- a/backtoshops/static/css/order-list.css
+++ b/backtoshops/static/css/order-list.css
@@ -578,3 +578,7 @@ span.deadline {
 }
 .out:hover{ background-position: 0 -16px; }
 /* forms end */
+
+.order_tab {
+    cursor: pointer;
+}
